# goblin-instrumentality-project

./: .clang-format  .copilot-review-prompt.md  .gitattributes  .gitignore  .opencppcoverage  AGENTS.md  CMakeLists.txt  COMMIT_MSG.txt  NUL  README.md  build-log.txt  goblin-stream.sln  goblin-stream.vcxproj  nul  perf-highlights.html  refactor-highlights.html  run_coverage.bat  run_coverage.ps1  shame.md  test-internal-links.md  validate_coverage_setup.bat
.agent/: PLANS.md
.github/: BUGBOT_IMPLEMENTATION.md  BUGBOT_QUICKSTART.md  BUG_TRIAGE_SYSTEM.md  COPILOT_INTERACTION_GUIDE.md  COPILOT_SETUP_VALIDATION.md  MCP_README.md  QUICK_REFERENCE.md  copilot-instructions.md  markdown-link-check-config.json  mcp-config.json
.github/ISSUE_TEMPLATE/: copilot-usage.md
.github/agents/: BUGBOT_GUIDE.md  bugbot.agent.md  gobbo.agent.md  profiler.agent.md
.github/prompts/: README.md  check-raii.prompt.md  cleanup-git-hygiene.prompt.md  debug-resources.prompt.md  explain-nvenc.prompt.md  gobbo-subagent.prompt.md  profile-performance.prompt.md  refactor-extract.prompt.md  review-error-handling.prompt.md  review-frame-logic.prompt.md  stage-changelist.prompt.md
.github/workflows/: auto-approve-bot-workflows.yml  bug-triage.yml  build-and-validate.yml  code-quality.yml  copilot-setup-steps.yml  coverage.yml  create-crash-issue.yml  daily-doc-updater.lock.yml  daily-doc-updater.md  daily-repo-status.lock.yml  docs-index-check.yml  docs-lint.yml  fix-app-failure.yml  format-check.yml  generate-highlights.yml  gobbo-review.yml  monitor-assigned-issues.yml  report-workflow-failures.yml  run-app.yml  update-highlights.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: CODE_COVERAGE.md  FAILED_WORKFLOW_APPROVAL_ATTEMPTS.md  GITHUB_WORKFLOWS.md  HEADLESS_MODE.md  PR_SPLIT_GUIDE.md  QUICKSTART_TASKS.md  QUICK_FIX_WORKFLOW_APPROVAL.md  README.md  REMAINING_WORKFLOW_TASKS.md  STEP_BY_STEP_WORKFLOW_FIX.md  TEST_COVERAGE_INTEGRATION.md  WORKFLOW_APPROVAL_SOLUTION.md  copilot-known-errors.md  coverage-cleanup-plan.md  mesh-rendering-pbr-plan.md  nvenc-crash-fix-summary.md  nvenc-d3d12-workflow.md  project-reasoning-map.md  small-efficient-refactor-patterns.md
docs/execplans/: 2026-02-19-app-coordinator-refactor-execplan.md  2026-02-19-app-readability-conciseness-execplan.md  2026-02-19-app-waitable-components-execplan.md  2026-02-19-frame-encoder-runloop-perf-execplan.md  2026-02-19-golden-frame-comparison-execplan.md  2026-02-19-relwithdbginfo-profiling-ghpages-execplan.md  2026-02-19-terminal-command-reset-execplan.md  2026-02-19-terminal-cwd-fix-execplan.md  2026-02-19-vsdiagnostics-profiling-execplan.md  2026-02-20-headless-native-coverage-execplan.md  debug-log-build-gating-execplan.md  mesh-rendering-pbr-plan.md  simplify-debug-logging-console-macro-execplan.md
docs/perf-baselines/: README.md  baseline_2026-02-19.json  baseline_review-fix-5s_20260220_165435.json
docs/tasks/: README.md  task-001-format-check-workflow.md  task-002-code-quality-workflow.md  task-003-metrics-generation-workflow.md
include/: try.h
include/nvenc/: nvEncodeAPI.h
scripts/: agent-wrap.ps1  check-docs-index.py  cleanup-git-stale.ps1  configure-cmake.ps1  coverage.runsettings  profile-exe.ps1  render-perf-report.ps1  run-headless-coverage.ps1
src/: app.cpp  app.h  app.ixx  app_logging.cpp  app_logging.h  crash_diagnostics.h  debug_log.h  frame_debug_log.cpp  frame_debug_log.h  main.cpp  try.h
src/encoder/: bitstream_file_writer.cpp  bitstream_file_writer.h  frame_encoder.cpp  frame_encoder.h  nvenc_config.cpp  nvenc_config.h  nvenc_d3d12.cpp  nvenc_d3d12.h  nvenc_session.cpp  nvenc_session.h
src/graphics/: command_allocators.cpp  commands.cpp  d3d12_command_allocators.cpp  d3d12_command_allocators.h  d3d12_commands.cpp  d3d12_commands.h  d3d12_device.cpp  d3d12_device.h  d3d12_frame_resources.cpp  d3d12_frame_resources.h  d3d12_frame_sync.cpp  d3d12_frame_sync.h  mesh.h  (+17 more)
(+8 files in other folders)
